update the background

--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
     <title>Weather</title>
   </head>
   <body class="canty">
-    <div class="container">
-      <input id="input-btn" type="text" placeholder="Enter a city" />
-      <button id="submit-btn">Submit</button>
+    <div class="canty_name">
+      <div class="container">
+        <input id="input-btn" type="text" placeholder="Enter a city" />
+        <br />
+        <button id="submit-btn">Submit</button>
 
-      <h3 id="city">Dhaka</h3>
-      <p></p>
-      <p id="temp">32.00 &deg;</p>
-      <h4 id="des">Description</h4>
+        <h3 id="city">Dhaka</h3>
+        <p></p>
+        <p id="temp">32.00 c.0</p>
+        <h4 id="des">Description</h4>
+      </div>
     </div>
 
     <script src="app.js"></script>
