--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <h3 id="city">Dhaka</h3>
         <p></p>
-        <p id="temp">32.00 c.0</p>
+        <p id="temp">32.00 &deg; C</p>
         <h4 id="des">Description</h4>
       </div>
     </div>
